--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="col-12 col-md-11 mx-auto">
-                        <form method="GET" data-url="{% url 'shop:api-search' %}" v-on:submit.prevent="search($event)">
+                        <form method="GET" data-url="#" v-on:submit.prevent="search($event)">
                             <div class="input-group mb-3">
                                 <input type="text" v-model="query" autocomplete="off" class="form-control bg-transparent search border-bottom border-top-0 border-right-0 border-left-0 rounded-0" id="InputSearch" name="query" placeholder="search our store..." aria-label="Search">
                                 <div class="input-group-append">
